Testing/TestCache/test15.txt
Error trace on line: 45, column: 5 in file "Core".
inl uint16 = type 0u16 
    ^
Variable split not bound.
